@@ -26,6 +26,7 @@ Emulation fixes:
  - GBA Video: Fix wrapped sprite mosaic clamping (fixes mgba.io/i/1432)
  - GBA Memory: Fix STM to VRAM (fixes mgba.io/i/1430)
  - GB Audio: Only reset channel 3 sample in DMG mode
+ - GB Audio: Sample inactive channels (fixes mgba.io/i/1455, mgba.io/i/1456)
 Other fixes:
  - Qt: Fix some Qt display driver race conditions
  - Core: Improved lockstep driver reliability (Le Hoang Quyen)
